# cfd-viz

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
api/cli/: index.html
api/contour/: index.html
api/mesh/: index.html
docs/: index.md  installation.md
docs/api/: cli.md  contour.md  index.md  mesh.md
docs/user-guide/: api-usage.md  cli.md  index.md
installation/: index.html
search/: search_index.json
src/cfd_viz/: __init__.py  cli.py  contour.py  lst.py  mesh.py
tests/: test_viz.py
user-guide/: index.html
user-guide/api-usage/: index.html
user-guide/cli/: index.html
